--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+env_logger = "0.11.7"
 gpui = { git = "https://github.com/zed-industries/zed" }
